@@ -1454,25 +1454,76 @@ ret:
 		const int num_blocks = (aligned_size + block_size - 1) / block_size;
 		TORRENT_ASSERT((aligned_size & size_align) == 0);
 
-		disk_buffer_holder tmp_buf(*disk_pool(), disk_pool()->allocate_buffers(num_blocks, "read scratch"), num_blocks);
+		disk_buffer_holder tmp_buf(*disk_pool(), disk_pool()->allocate_buffers(
+			num_blocks, "read scratch"), num_blocks);
 		file::iovec_t b = {tmp_buf.get(), aligned_size};
 		size_type ret = file_handle->readv(aligned_start, &b, 1, ec);
-		if (ret < 0) return ret;
+		if (ret < 0)
+		{
+			TORRENT_ASSERT(ec);
+			return ret;
+		}
+		if (ret < aligned_size) return (std::max)(size - (start_adjust - ret), size_type(0));
+
 		char* read_buf = tmp_buf.get() + start_adjust;
 		for (file::iovec_t const* i = bufs, *end(bufs + num_bufs); i != end; ++i)
 		{
 			memcpy(i->iov_base, read_buf, i->iov_len);
 			read_buf += i->iov_len;
 		}
-		if (ret < size + start_adjust) return ret - start_adjust;
+
 		return size;
 	}
 
+	// this is the really expensive one. To write unaligned, we need to read
+	// an aligned block, overlay the unaligned buffer, and then write it back
 	size_type storage::write_unaligned(boost::shared_ptr<file> const& file_handle
 		, size_type file_offset, file::iovec_t const* bufs, int num_bufs, error_code& ec)
 	{
-		TORRENT_ASSERT(false); // not implemented
-		return 0;
+		const int pos_align = file_handle->pos_alignment()-1;
+		const int size_align = file_handle->size_alignment()-1;
+		const int block_size = disk_pool()->block_size();
+
+		const int size = bufs_size(bufs, num_bufs);
+		const int start_adjust = file_offset & pos_align;
+		TORRENT_ASSERT(start_adjust == (file_offset % file_handle->pos_alignment()));
+		const size_type aligned_start = file_offset - start_adjust;
+		const int aligned_size = ((size+start_adjust) & size_align)
+			? ((size+start_adjust) & ~size_align) + size_align + 1 : size + start_adjust;
+		const int num_blocks = (aligned_size + block_size - 1) / block_size;
+		TORRENT_ASSERT((aligned_size & size_align) == 0);
+
+		// allocate a temporary, aligned, buffer
+		disk_buffer_holder aligned_buf(*disk_pool(), disk_pool()->allocate_buffers(
+			num_blocks, "write scratch"), num_blocks);
+		file::iovec_t b = {aligned_buf.get(), aligned_size};
+		size_type ret = file_handle->readv(aligned_start, &b, 1, ec);
+		if (ret < 0)
+		{
+			TORRENT_ASSERT(ec);
+			return ret;
+		}
+		if (ret < aligned_size) return (std::max)(size - (start_adjust - ret), size_type(0));
+
+		// OK, we read the portion of the file. Now, overlay the buffer we're writing 
+
+		char* write_buf = aligned_buf.get() + start_adjust;
+		for (file::iovec_t const* i = bufs, *end(bufs + num_bufs); i != end; ++i)
+		{
+			memcpy(write_buf, i->iov_base, i->iov_len);
+			write_buf += i->iov_len;
+		}
+
+		// write the buffer back to disk
+		ret = file_handle->writev(aligned_start, &b, 1, ec);
+
+		if (ret < 0)
+		{
+			TORRENT_ASSERT(ec);
+			return ret;
+		}
+		if (ret < aligned_size) return (std::max)(size - (start_adjust - ret), size_type(0));
+		return size;
 	}
 
 	int storage::write(
